Tue Sep  8 17:05:47 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tools/style/style.d/01_whitespaces.sed:
        * tools/style/style.d/02_obsolete.sed:
        * tools/style/style.d/03_ACE_THROW_SPEC.sed:
        * tools/style/style.d/04_rparens.sed:

          style.d script updates.

Tue Sep  8 15:47:44 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/DCPS/ZeroCopySeq_T.inl:

          Refactored DDS_Vector to ZeroCopyVector; better reflects intention
          and eliminates use of a DDS prefix (causes conflicts when run against
          style.sh)

Fri Sep  4 20:03:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tools/copyright:

          Added new scripts for managing project copyrights.

Fri Sep  4 18:59:47 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tools:
        * tools/setenv.csh:
        * tools/setenv.sh:

          Added boilerplate environment scripts for new users.

        * tools/style:

          Added new scripts for applying project style changes.

Fri Sep  4 18:00:20 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DdsDcpsDomain.idl:

          Fixed compilation failure on DDS_HAS_MINIMUM_BIT builds.

        * dds/DCPS/transport/framework/TransportDefs.h:

          Removed unused variable to fix warnings.

Fri Sep  4 16:49:04 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.cpp:
        * dds/DCPS/ReceivedDataElementList.h:

          Fixed a few compilation errors and warnings on linux.

Thu Sep  3 16:39:21 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Removed obsolete next_handle_ member.

        * dds/DCPS/DataWriterImpl.h: