@@ -34,12 +34,6 @@ namespace OpenDDS
     //TBD - add check for enabled in most methods.
     //      currently this is not needed because auto_enable_created_entities
     //      cannot be false.
-#if 0
-    // Emacs trick to align code with first column
-    // This will cause emacs to emit bogus alignment message
-    // For now just disregard them.
-  }}
-#endif
 
 DataWriterImpl::DataWriterImpl (void)
   : data_dropped_count_ (0),
